@@ -5,6 +5,7 @@ Next
 ----
 - Cythonize .pyx files (#34).
 - Work with or around lack of OGR's internal recoding of record data (#35).
+- Fix bug in serialization of int/float PROJ.4 params.
 
 0.10 (2013-03-23)
 -----------------
